# mpc-node

./: README.md  rust-toolchain.toml
node/: Cargo.toml
pallets/template/: Cargo copy.toml  Cargo.toml
pallets/template/src/: lib.rs  methods.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
